--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"format_version": 2,
 	"header": {
-		"name": "pack.name",
-		"description": "pack.description",
+		"name": "Avatar Addon V8!",
+		"description": "Adds the bending seen in avatar to minecraft! Avatar, Air, Earth, Water, Fire and Chi-Blocking. Made by: GlitcyTurtle32",
 		"uuid": "208c5c07-d70e-4af2-bbc1-f9e497ca8f45",
 		"version": [
 			1,
