--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 	"format_version": 2,
 	"header": {
-		"name": "Avatar Addon V8!",
-		"description": "Adds the bending seen in avatar to minecraft! Avatar, Air, Earth, Water, Fire and Chi-Blocking. Made by: GlitcyTurtle32",
-		"uuid": "208c5c07-d70e-4af2-bbc1-f9e497ca8f45",
+		"name": "Avatar Addon 2!",
+		"description": "test1Adds the bending seen in avatar to minecraft!",
+		"uuid": "54edfea5-ab51-a7ca-b192-724e255b5560",
 		"version": [
-			1,
+			2,
 			0,
 			0
 		],
@@ -17,9 +17,18 @@
 	},
 	"modules": [
 		{
-			"description": "GameTest Module Minecraft",
+			"type": "data",
+			"uuid": "d8395127-6923-4fb7-93d2-977cecd463e0",
+			"version": [
+				1,
+				0,
+				0
+			]
+		},
+		{
+			"description": "Gametest Features",
 			"type": "javascript",
-			"uuid": "718f8756-efd4-4f2c-8590-9f77c9537fbb",
+			"uuid": "1326c87b-37f3-4543-9f0f-0d03893134e1",
 			"version": [
 				0,
 				0,
@@ -38,6 +47,14 @@
 			]
 		},
 		{
+			"uuid": "2BD50A27-AB5F-4F40-A596-3641627C635E",
+			"version": [
+				0,
+				1,
+				0
+			]
+		},
+		{
 			"uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
 			"version": [
 				0,
@@ -45,12 +62,5 @@
 				0
 			]
 		}
-	],
-	"metadata": {
-		"generated_with": {
-			"bridge": [
-				"1.8.4"
-			]
-		}
-	}
+	]
 }
