--- a/Avatar Addon V9 BP/manifest.json
+++ b/Avatar Addon V9 BP/manifest.json
@@ -1,9 +1,9 @@
 {
 	"format_version": 2,
 	"header": {
-		"name": "Server: Avatar Addon 1.19!",
-		"description": "Adds the bending seen in avatar to minecraft!",
-		"uuid": "54edfea5-ab12-b7ca-b192-724e255b5560",
+		"name": "§6Avatar §3Addon! §8[1.19]§r",
+		"description": "Adds the bending seen in avatar the last airbender to minecraft! All credit to GlitchTurtle32!",
+		"uuid": "54edfea5-ac12-b7ca-b192-724e255b5560",
 		"version": [
 			2,
 			0,
@@ -11,63 +11,30 @@
 		],
 		"min_engine_version": [
 			1,
-			13,
+			17,
 			0
 		]
 	},
-	"modules": [
+   	"modules": [
 		{
-			"type": "data",
-			"uuid": "d8395127-6923-4fb7-93d2-977cecd463e0",
-			"version": [
-				1,
-				0,
-				0
-			]
-		},
-		{
-			"description": "Gametest Features",
-			"type": "script",
-			"uuid": "1326c87b-37f3-4543-9f0f-0d03893134e1",
-			"version": [
-				0,
-				0,
-				1
-			],
-			"entry": "scripts/main.js"
-		}
-	],
+            		"description": "Gamest Features (basically everything in the addon).",
+           			"type": "script",
+            		"language": "javascript",
+            		"uuid": "1A1B53FC-5653-4A75-91B7-9CDF027674AE",
+            		"version": "1.0.0-beta",
+            		"entry": "scripts/main.js"
+        		}
+    	],
 	"dependencies": [
 		{
-			"uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
-			"version": [
-				0,
-				1,
-				0
-			]
+    			// mojang-minecraft
+   			"uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
+    			"version": "1.0.0-beta"
 		},
 		{
-			"uuid": "2BD50A27-AB5F-4F40-A596-3641627C635E",
-			"version": [
-				0,
-				1,
-				0
-			]
-		},
-		{
-			"uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
-			"version": [
-				0,
-				1,
-				0
-			]
+    			// mojang-minecraft-ui
+    			"uuid": "2bd50a27-ab5f-4f40-a596-3641627c635e",
+    			"version": "1.0.0-beta"
 		}
-	],
-	"metadata": {
-		"generated_with": {
-			"bridge": [
-				"1.8.4"
-			]
-		}
-	}
+	]
 }
